# planning-experiments

./: .buildinfo  .gitignore  Diagramma senza titolo.drawio  DockerFile  README.md  cfg_test.json  constants.py  crate_compiler.py  crate_planner.py  elaborate_data.py  genindex.html  index.html  launch_experiments.py  modules.html  objects.inv  planning_experiments.data_structures.html  planning_experiments.html  planning_experiments.plot_utils.html  platform_indipendet.tx  py-modindex.html  register_planner.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: gh-pages.yml
ENSHP/: test.py
_modules/: index.html
_sources/: planning_experiments.data_structures.rst.txt  planning_experiments.plot_utils.rst.txt
cfg_files/: cfg_template.json
collect_data/: collect_data.py  collect_data_base.py  collect_data_fd_ff.py  collect_data_fd_multi.py  collect_data_utils.py  collect_planner_template.py
docs/: conf.py  index.rst  modules.rst  planning_experiments.rst
examples/: ENSHP_apptainer_demo.py  ENSHP_demo.py  ENSHP_generic_apptainer_demo.py  classical_planning_example.py  classical_planning_example_qsub.py  hello_world.py
planning_experiments/: ApptainerManager.py  __init__.py  collect_data_utils.py  constants.py  experiment_environment.py  initial_setup.py  instances_collector.py  launch_experiments.py  libraries.py  save_results.py  script_builder.py  script_builder_python.py  summary.py  test.py  utils.py
recipe/: Apptainer.enhsp  Apptainer.enhsp_generic
test/: test_experiment.py  test_logs_parser.py  test_pddl_collection.py
(+65 files in other folders)
