[metadata]
name=planning_experiments
author=Luigi Bonassi
version = attr: planning_experiments.__version__
description = A library for running experiments with planners!
long_description = file: README.md, LICENSE
long_description_content_type = "text/markdown"
keywords = planning experiments
license = GPL-3.0-or-later
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Environment :: Console
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires = 
        tqdm 
        matplotlib
        pandas
        tabulate
        numpy

python_requires= >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    planning_experiments*
exclude =